# tcg-klonit

./: .gitignore  README.md  package-lock.json  package.json  retail_agent.py
Local-Agent/: main.py  medical_agent.py  retail_agent.py  retail_setup.sql
Local-Agent/tools/: drive_tool.py
backend/: .env.example  .gitignore  README.md  client.js  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  server.js  server.py  setup-db.js  setup.sql  test-db.js  test.js  test.py  test_mcp_server.py  test_server.py  token.json
backend/connections/: sqlquery.ts
backend/mcp-python-agent/: agent.py  auth.py  auth_test.py  main.py  medical_setup.sql  requirements.txt  retail_agent.py  test.py  tool_demo.py  tool_manifest.json  tool_registry.py
backend/mcp-python-agent/tools/: __init__.py  calendar_tool.py  drive_tool.py  sql_tool.py
backend/mcp_python/: README.md  main.py  pyproject.toml  server.py
backend/mcp_python/database/: __init__.py  common.py  medical.py  retail.py
backend/mcp_python/klonit.egg-info/: SOURCES.txt  requires.txt
backend/venv-py311/: pyvenv.cfg
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/api/: client.js
frontend/src/components/: CalendarView 2.js  CalendarView.js  DriveTable 2.js  DriveTable.js  DriveView 2.js  DriveView.js  SQLView.js
mcp-python-agent/: agent.py  requirements.txt
